# magic_cursor_sso

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  context.rs  entity.rs  history.rs  lib.rs  main.rs  mouse_hook.rs  ollama_client.rs  providers.rs  shake_detector.rs  window_manager.rs
src/components/: BubbleResponse.tsx  ContextBanner.tsx  EntityCard.tsx  HistoryPanel.tsx  InputBar.tsx  Overlay.tsx  QuickActions.tsx  ResponseStream.tsx  Settings.tsx
src/hooks/: useShakeOverlay.ts
src/store/: historyStore.ts  overlayStore.ts
src/styles/: globals.css  overlay.module.css  settings.module.css
