[package]
name = "ai-cursor"
version = "0.1.0"
description = "Shake your cursor → floating AI overlay powered by Ollama"
authors = []
license = ""
repository = ""
default-run = "ai-cursor"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ai_cursor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ai-cursor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["full"] }
reqwest      = { version = "0.12", features = ["json", "stream", "multipart"] }
rdev         = "0.5"
arboard      = "3"
screenshots  = "0.8"
image        = "0.25"
base64       = "0.22"
futures-util = "0.3"
dirs         = "5"
bytes        = "1"
enigo        = "0.2"
uuid         = { version = "1", features = ["v4"] }
chrono       = { version = "0.4", features = ["serde"] }
regex        = "1"
once_cell    = "1"
open         = "5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
